# sdd_monitor

./: .env.example  .gitignore  access points.csv  pyproject.toml
config/: devices.yaml
documentation/: comandos.md
openspec/changes/ap-local-liveness-monitoring/: design.md  proposal.md  tasks.md
openspec/changes/ap-local-liveness-monitoring/specs/ap-local-liveness/: spec.md
openspec/changes/ap-local-liveness-monitoring/specs/html-report/: spec.md
openspec/changes/ap-local-liveness-monitoring/specs/metric-storage/: spec.md
openspec/changes/ap-local-liveness-monitoring/specs/poll-scheduling/: spec.md
openspec/changes/archive/2026-05-07-sdd-monitor/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-08-fix-sqlite-threading/: proposal.md
openspec/changes/fix-sqlite-threading/: design.md  tasks.md
openspec/changes/html-status-report/: design.md  proposal.md  tasks.md
openspec/changes/switch-interface-stats/: design.md  proposal.md  tasks.md
openspec/specs/: agents.md  project.md
openspec/specs/metric-storage/: spec.md
openspec/specs/poll-scheduling/: spec.md
openspec/specs/snmp-collection/: spec.md
openspec/specs/terminal-display/: spec.md
scripts/: README.md  interfaces.py
src/sdd_monitor/: __main__.py  collector.py  collector_liveness.py  html_report.py  models.py  presentation.py  processor.py  scheduler.py  storage.py
tests/: test_collector.py  test_collector_liveness.py  test_html_report.py  test_presentation.py  test_processor.py  test_scheduler.py  test_storage.py
(+11 files in other folders)
