[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdd-monitor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pysnmp-lextudio>=6",
    "rich>=13",
    "APScheduler>=3.10,<4",
    "pyyaml>=6",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
]

[project.scripts]
sdd-monitor = "sdd_monitor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
